--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,9 +23,6 @@
 <body>
 
 
-
-
-
 <th:block th:fragment="promo">
     <!--  Promo ITEM STRAT  -->
     <section id="promo_area" class="section_padding">
@@ -108,7 +105,6 @@
                 <div class="product_item">
                     <div class="row">
                         <!-- Product starts ALL -->
-
                         <div class="col-lg-3 col-md-4 col-sm-6 mix sale">
                             <div class="single_product">
                                 <div class="product_image">
@@ -120,7 +116,6 @@
                                         <a href="#"><i class="fa fa-search"></i></a>
                                     </div>
                                 </div>
-
                                 <div class="product_btm_text">
                                     <h4><a href="#">Product Title</a></h4>
                                     <div class="p_rating">
@@ -131,22 +126,20 @@
                                         <i class="fa fa-star"></i>
                                     </div>
                                     <span class="price">$123.00</span>
-
                                 </div>
                             </div>
-
                             <!-- Product ends ALL -->
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 </th:block>
 
 <th:block th:fragment="header">
     <!--  Start Header  -->
     <header id="header_area">
-
 
 
         <div class="header_btm_area">
@@ -396,9 +389,17 @@
     <!--  End Header  -->
 </th:block>
 
-
-
-
+<th:block th:fragment="marginTop">
+    <div id="page_item_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 text-left">
+                    <h3></h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 
 <th:block th:fragment="js_scripts">
     <script th:src="@{js/vendor/jquery-1.12.4.min.js}"></script>
