--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,9 +15,9 @@
     <div th:replace="fragments/slider :: slider"/>
     <div th:replace="fragments :: promo"/>
 
-    <!-- Doesn't work :-( -->
-    <div th:include="fragments/featuredProducts :: featuredProducts"/>
-    <!-- Doesn't work :-( -->
+
+    <div th:replace="fragments/featuredProducts :: featuredProducts"/>
+
 
     <div th:replace="fragments/Testimonials :: testimonials"/>
     <div th:replace="fragments/freeShippingBlock :: freeShippingBlock"/>
