--- a/src/main/resources/templates/products/product-form.html
+++ b/src/main/resources/templates/products/product-form.html
@@ -15,7 +15,7 @@
 
     <p class="h4 mb-4">Create Product</p>
 
-    <form action="#" th:action="@{/products/save}"
+    <form action="#" th:action="@{/admin/save}"
           th:object="${products}" method="POST">
 
         <!-- Add hidden form field to handle update -->
@@ -39,7 +39,7 @@
 
     <hr>
 
-    <a th:href="@{/products/list}" class="btn btn-warning col-2">Back to Products List</a>
+    <a th:href="@{/admin/list}" class="btn btn-warning col-2">Back to Products List</a>
 
 </div>
 
