--- a/src/main/resources/templates/fragments/header-top.html
+++ b/src/main/resources/templates/fragments/header-top.html
@@ -28,10 +28,12 @@
                                 <li class="account_area"><a th:href="@{/}"><i class="fa fa-home"></i> Home</a></li>
                                 <li class="account_area"><a th:href="@{/login}"><i class="fa fa-user"></i> My
                                     Account</a></li>
-                                <li class="account_area"><a th:href="@{/products/list}"><i class="fa fa-picture-o"></i>
+                                <li class="account_area"><a th:href="@{/list}"><i class="fa fa-picture-o"></i>
                                     Products</a></li>
                                 <li class="account_area"><a th:href="@{/admin/list}"><i class="fa fa-folder-open"></i>
                                     Admin</a></li>
+                                <li class="account_area"><a th:href="@{/cart}"><i class="fa fa-folder-open"></i>
+                                    Cart</a></li>
                             </ul>
                         </div>
                     </div>
