--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,42 +1,110 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lista produktów</title>
-    <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="home.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div th:replace="fragments :: style"></div>
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" th:fragment="menu">
-    <a th:href="@{/}" class="navbar-brand">HomePage</a>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a th:href="@{/list}" class="nav-link">Product List</a>
-        </li>
-        <li class="nav-item">
-            <a th:href="@{/products/admin}" class="nav-link">Admin</a>
-        </li>
-        <li class="nav-item">
-            <a th:href="@{/products/login}" class="nav-link">Login</a>
-        </li>
-    </ul>
-</nav>
-
-
 <div class="container-fluid" style="margin-top:80px">
-    <div th:text="${'Id = '+zmienna.id}"></div>
-    <div th:text="${'Name = '+zmienna.name}"></div>
-    <div th:text="${'Description = '+zmienna.description}"></div>
-    <img th:src="@{/images/{image} (image=${zmienna.image})}">
-    <div th:text="${'Price = '+zmienna.price}"></div>
+    <div th:replace="fragments/header-top::header-top"></div>
+
+    <div id="page_item_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 text-left">
+                    <h3 th:text="${zmienna.name}"></h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
+<!-- ....................................................................     -->
+<!-- Product Details Area  -->
+<input type="hidden" th:text="${zmienna.id}">
+<div class="prdct_dtls_page_area">
+    <div class="container">
+        <div class="row">
+            <!-- Product Details Image -->
+            <div class="col-md-6 col-xs-12">
+                <div class="pd_img fix">
+                    <img th:src="@{/images/{image} (image=${zmienna.image})}">
+                </div>
+            </div>
+            <!-- Product Details Content -->
+            <div class="col-md-6 col-xs-12">
+                <div class="prdct_dtls_content">
+                    <a class="pd_title" th:text="${zmienna.name}"></a>
+                    <div class="pd_price_dtls fix">
+                        <!-- Product Price -->
+                        <div class="pd_price">
+                            <span class="new" th:text="('£ ')+${zmienna.price}"></span>
+                            <span class="old" th:text="('£ ')+${zmienna.price+(zmienna.price/10)}"></span>
+                        </div>
+                        <!-- Product Ratting -->
+                        <div class="pd_ratng">
+                            <div class="rtngs">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-o"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pd_text">
+                        <h4>overview:</h4>
+                        <p th:text="${zmienna.description}"></p>
+                    </div>
+                    <div class="pd_img_size fix">
+                        <h4>size:</h4>
+                        <a href="#">s</a>
+                        <a href="#">m</a>
+                        <a href="#">l</a>
+                        <a href="#">xl</a>
+                        <a href="#">xxl</a>
+                    </div>
+                    <div class="pd_clr_qntty_dtls fix">
+                        <div class="pd_clr">
+                            <h4>color:</h4>
+                            <a href="#" class="active" style="background: #ffac9a;">color 1</a>
+                            <a href="#" style="background: #ddd;">color 2</a>
+                            <a href="#" style="background: #000000;">color 3</a>
+                        </div>
+                        <div class="pd_qntty_area">
+                            <h4>quantity:</h4>
+                            <div class="pd_qty fix">
+                                <input value="1" name="qttybutton" class="cart-plus-minus-box" type="number">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product Action -->
+                    <div class="pd_btn fix">
+                        <a class="btn btn-default acc_btn" th:href="@{/cart/add/{productId} (productId=${product.id})}">add to bag</a>
+                        <a class="btn btn-default acc_btn btn_icn"><i class="fa fa-heart"></i></a>
+                        <a class="btn btn-default acc_btn btn_icn"><i class="fa fa-refresh"></i></a>
+                    </div>
+                    <div class="pd_share_area fix">
+                        <h4>share this on:</h4>
+                        <div class="pd_social_icon">
+                            <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="vimeo" href="#"><i class="fa fa-vimeo"></i></a>
+                            <a class="google_plus" href="#"><i class="fa fa-google-plus"></i></a>
+                            <a class="tumblr" href="#"><i class="fa fa-tumblr"></i></a>
+                            <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
+<div th:replace="fragments :: js_scripts"></div>
 </body>
 </html>
